[tool:pytest]
addopts =
    --cov-report html:cover
    --cov-report term
    --cov-config=.coveragerc
    --junitxml=report.xml
    --cov=src
    --doctest-modules
    --durations=20
    --ignore=doc/
    --ignore=examples/
    --instafail
    --pycodestyle
    --pydocstyle
filterwarnings =
    ignore::PendingDeprecationWarning
    ignore::RuntimeWarning
    ignore::UserWarning

[pycodestyle]
max_line_length = 88
ignore = E501, E203, W503, W605
statistics = True

[pydocstyle]
convention = numpy
add-ignore = D100, D103, D104

[metadata]
description-file = README.md
name = nlpboost
version = 0.0.1
author = Alejandro Vaca Serrano
author_email = alejandro_vaca0@hotmail.com
description = a Python package for automatic training and comparison of transformer models
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/avacaondata/nlpboost
